# curiosity-projects

./: LICENSE  README.md
git-log-analyze/: .gitignore  git-log-analyze.R
neovim-average-colorscheme/: neovim-average-colorscheme.lua
neovim-default-colorscheme/: neovim-default-colorscheme.lua
neovim-options-survey/: .gitignore  neovim-survey-summary_all.csv  neovim-survey-summary_separated-listoptions.csv  neovim-survey-summary_top-nondefault.csv  neovim-survey_process.R
neovim-plugin-number/: .gitignore  01_setup.lua  02_bench-filetype.lua  03_make-startup-summary.lua  04_make-plots.R  README.md  benchmark.sh  filetype-bench-summary.csv  nvim_version  startup-bench-summary.csv
oklab/: .gitignore  Makefile  README.md  colors_outside_triangle.csv  cusps.csv  pyproject.toml  pyrightconfig.json
oklab/oklab/: conversion.py  generate.py
tracked-sample/: .gitignore  README.md  exploration.py  tracked_sample.py
ttd-world-record/: .gitignore  README.md  create-beats.py  exploration.py  ttd-world-record_beats.csv  video-preprocess.txt
