[tool.poetry]
name = "oklab"
version = "0.1.0"
description = "Experiments with Oklab"
authors = ["Evgeni Chasnovski <evgeni.chasnovski@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

